<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <EditText
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:autofillHints="latitude"
        android:hint="@string/latitudeHint"
        android:inputType="numberDecimal"
        android:minWidth="200dp"
        android:minHeight="50dp"
        android:text="@string/latitude"
        app:flow_horizontalBias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="longitude"
        android:hint="@string/longitudeHint"
        android:inputType="numberDecimal"
        android:minWidth="200dp"
        android:minHeight="50dp"
        android:text="@string/longitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/latitude" />

    <EditText
        android:id="@+id/interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="interval"
        android:hint="@string/intervalHint"
        android:inputType="numberSigned"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:text="@string/interval"
        app:layout_constraintBottom_toTopOf="@+id/confirm"
        app:layout_constraintEnd_toStartOf="@+id/timeList"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitude" />

    <Spinner
        android:id="@+id/timeList"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:minWidth="150dp"
        app:layout_constraintBottom_toTopOf="@+id/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/interval"
        app:layout_constraintTop_toBottomOf="@+id/longitude" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:onClick="confirmButton"
        android:text="@string/confirm"
        app:layout_constraintBottom_toTopOf="@+id/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:onClick="moveToAbout"
        android:text="@string/about"
        app:layout_constraintBottom_toTopOf="@+id/buttonExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:minHeight="50dp"
        android:onClick="moveToExit"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>